Remove previously declared biased locking option
UseBiasedLocking was deprecated and disabled as part of https://openjdk.java.net/jeps/374